Add some content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Harlan Crystal</title>
+</head>
+
+<body>
+  <header class="banner">
+    <img class="banner-img" src="banner-image.jpg" alt="Banner">
+  </header>
+
+  <div class="profile-section">
+    <img class="profile-photo" src="harlan-image.jpg" alt="Profile Photo">
+    <h2>Harlan Crystal</h2>
+  </div>
+
+  <main class="content">
+    <ul>
+      <li><a href="https://www.instagram.com/harlancrystal/">Instagram</a></li>
+      <li><a href="https://www.facebook.com/harlancrystal">Facebook</a></li>
+      <li><a href="https://x.com/harlancrystal">Twitter</a></li>
+      <li><a href="https://github.com/harlan">Twitter</a></li>
+    </ul>
+  </main>
+
+
+</body>
+</html>
+
