--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
     <img class="banner-img" src="banner-image.jpg" alt="Banner">
   </header>
 
-  <div class="profile-section">
+  
+<section class="profile-card">
+  <div class="header-row">
     <img class="profile-photo" src="harlan-image.jpg" alt="Profile Photo">
-    <h2>Harlan Crystal</h2>
+    <div class="title-block">
+      <h2>Harlan Crystal</h2>
+    </div>
   </div>
-
-  <main class="content">
+  <div class="profile-body">
     <ul>
       <li><a href="https://www.instagram.com/harlancrystal/">Instagram</a></li>
-      <li><a href="https://www.facebook.com/harlancrystal">Facebook</a></li>
       <li><a href="https://x.com/harlancrystal">Twitter</a></li>
-      <li><a href="https://github.com/harlan">Twitter</a></li>
+      <li><a href="https://www.facebook.com/harlancrystal">Facebook</a></li>
+      <li><a href="https://github.com/harlan">Github</a></li>
     </ul>
-  </main>
+  </div>
+</section>
+
+
+  
+
+  
 
 
 </body>
