--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <title>Harlan Crystal</title>
 </head>
 
@@ -29,11 +30,6 @@
     </ul>
   </div>
 </section>
-
-
-  
-
-  
 
 
 </body>
