a little more content

--- a/index.html
+++ b/index.html
@@ -18,15 +18,30 @@
   <div class="header-row">
     <img class="profile-photo" src="harlan-image.jpg" alt="Profile Photo">
     <div class="title-block">
-      <h2>Harlan Crystal</h2>
+      <h1>Harlan Crystal</h1>
     </div>
   </div>
   <div class="profile-body">
+    Currently:
     <ul>
-      <li><a href="https://www.instagram.com/harlancrystal/">Instagram</a></li>
-      <li><a href="https://x.com/harlancrystal">Twitter</a></li>
-      <li><a href="https://www.facebook.com/harlancrystal">Facebook</a></li>
-      <li><a href="https://github.com/harlan">Github</a></li>
+      <li>I'm working on <a href="https://www.pocketgems.com">Pocket Gems</a>.</li>
+      <li>I live with my <a href="family_photo_2023.jpg">family</a> in San Francisco.</li>
+    </ul>
+    <br/>
+    Previously:
+    <ul>
+      <li>I lived in Cambridge and worked at <a href="https://www.smartleaf.com/">Smartleaf</a>.</li>
+      <li>I studied Computer Science at <a href="https://www.stonybrook.edu">Stony Brook</a> and <a href="https://www.cornell.edu/">Cornell</a>.</li>
+      <li>I grew up in uptown New York City and attended <a href="https://bxscience.edu/">Bronx Science</a>.</li>
+    </ul>
+    <br/>
+    Profiles:
+    <ul>
+      <li><a href="https://www.instagram.com/harlancrystal/"><img src="images/social_icons/instagram.svg" width=20 height=20/>Instagram</a></li>
+      <li><a href="https://x.com/harlancrystal"><img src="images/social_icons/x.svg" width=20 height=20/>X</a></li>
+      <li><a href="https://www.facebook.com/harlancrystal"><img src="images/social_icons/facebook.svg" width=20 height=20/>Facebook</a></li>
+      <li><a href="https://github.com/harlan"><img src="images/social_icons/github-mark.svg" width=20 height=20/>Github</a></li>
+      <li><a href="https://www.linkedin.com/in/harlancrystal"><img src="images/social_icons/linkedin.svg" width=20 height=20/>LinkedIn</a></li>
     </ul>
   </div>
 </section>
